# sgu-amr

./: .gitignore  PUSH_INSTRUCTIONS.md  README.md  README_FINAL_PROJECT.md  frames_2025-12-18_00.32.17.gv  frames_2025-12-18_00.38.11.gv
config/: patrol_waypoints.yaml
docs/: COMPILATION_NOTE.txt  FINAL_PROJECT_REPORT.md  Makefile  README_REPORT.md  Untitled  commands.tex  compile_report.sh  final_project_report.tex  phase1_final_project_report.md  phase2_final_project_report.md  phase3_final_project_report.md  phase4_final_project_report.md  phase5_6_final_project_report.md  preamble.tex  references.bib
exercise4_recording/: metadata.yaml
maps/: house_map.pgm  house_map.yaml
patrol_data/: metadata.yaml
src/exercise_launch/: package.xml  setup.cfg  setup.py
src/exercise_launch/config/: ekf_params.yaml  ekf_slam_params.yaml  gz_bridge.yaml  nav2_params.yaml  rqt_multiplot.xml  slam_params.yaml
src/exercise_launch/exercise_launch/: house_patrol.py  lidar_reader.py  nav2_goal_bridge.py  patrol_analysis.py  patrol_waypoint_recorder.py  pillar_driver.py
src/exercise_launch/launch/: analyze_patrol.launch.py  exercise1.launch.py  exercise3.launch.py  exercise4.launch.py  exercise4_record.launch.py  navigation.launch.py  phase2.launch.py  record_patrol.launch.py  simulation.launch.py  slam.launch.py
src/exercise_launch/models/pillar/: model.sdf
src/exercise_launch/rviz/: exercise3.rviz  exercise4.rviz  navigation.rviz  patrol_analysis.rviz  phase2.rviz  slam.rviz
src/exercise_launch/scripts/: check_slam_status.sh  check_slam_topics.sh  check_topics_live.sh  diagnose_false_wall.md  inspect_scan.sh  run_analyze_patrol.sh  run_exercise3.sh  run_exercise4.sh  run_exercise4_record.sh  run_navigation.sh  run_patrol_waypoint_recorder.sh  run_phase2.sh  run_record_patrol.sh  run_simulation.sh  run_slam.sh  save_map.sh  verify_slam_inputs.sh
src/exercise_launch/urdf/: rudimentary_bot.urdf.xacro  rudimentary_bot_analysis.urdf.xacro
src/exercise_launch/worlds/: home.sdf  singlePillar.world
