<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exercise_launch</name>
  <version>0.0.0</version>
  <description>ROS 2 exercises for TurtleBot4 simulation - Exercises 1, 3, and 4</description>
  <maintainer email="dio@todo.todo">dio</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- TurtleBot4 packages -->
  <exec_depend>turtlebot4_gz_bringup</exec_depend>
  <exec_depend>turtlebot4_description</exec_depend>
  
  <!-- Gazebo ROS packages -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <!-- Robot localization for Exercise 4 -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <!-- Nav2 (Phase 4-6) -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  
  <!-- Create3 / TurtleBot4 base messages (hazard detection, bumpers, etc.) -->
  <exec_depend>irobot_create_msgs</exec_depend>
  
  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  
  <!-- Teleop -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
